添加 STUN 和自动 PortMapper